--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><script>window.location.href = 'https://www.notion.so/a285a99a8f0e460d965d94467898591b';</script></head></body></html>
+<!DOCTYPE html><html><head><script>window.location.href = 'https://www.notion.so/a285a99a8f0e460d965d94467898591b';</script></head><body>wait...</body></html>
