--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><script>var pathname = new URL(window.location.href).pathname; window.location.href = 'https://www.notion.so' + (pathname === '/' ? '/a285a99a8f0e460d965d94467898591b' : pathname);</script></head><body>Redirect...</body></html>
+<!DOCTYPE html><html><head><script>window.location.href = 'https://www.notion.so/a285a99a8f0e460d965d94467898591b';</script></head><body>Loading...</body></html>
